<resources>
    <string name="app_name">MoneyButDaily</string>
    <string name="MainToday">Today:</string>
    <string name="AddEntry">Add</string>
    <string name="title_activity_row_list">RowListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="plus">+</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="minus">-</string>
    <string name="todo">$TODO</string>
    <string name="info">info</string>
    <string name="today_value">$%1$s</string>
    <string name="edit_amount">Amount</string>
    <string name="edit_is_income">Is Income</string>
    <string name="edit_save">Save</string>
    <string name="edit_delete">Delete</string>
    <string name="edit_category">Category</string>
    <string name="edit_start_date">Start Date</string>
    <string name="edit_not_set">not set</string>
    <string name="edit_set">Set</string>
    <string name="edit_repeats">Repeats</string>
    <string name="edit_repeat_until">Repeat Until</string>
    <string name="edit_notes">Notes</string>
    <string name="edit_length_count">Length Count</string>
    <string name="edit_plus">+</string>
    <string name="edit_minus">-</string>
    <string name="edit_a_day">$0/day</string>
    <string name="main_reports">Reports</string>
    <string name="main_view_all">View All</string>
    <string name="main_lt"><![CDATA[<]]></string>
    <string name="main_gt"><![CDATA[>]]></string>
    <string name="main_expenses">Expenses</string>
    <string name="report_no_idea">no idea</string>
    <string name="report_now">Now</string>
    <string name="n_a">N/A</string>
    <string name="_0">$0</string>
    <string name="list_today">today?</string>
    <string name="_1">1</string>
    <string name="none">None</string>
    <string name="n">N</string>
    <string name="list_edit">Edit</string>
    <string name="list_0_day">$0/day</string>
</resources>
