<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/row_list_item_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/n_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/row_list_item_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@+id/row_list_item_startdate"
        app:layout_constraintStart_toEndOf="@+id/row_list_item_category"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/row_list_item_startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/list_today"
        app:layout_constraintEnd_toStartOf="@+id/row_list_item_edit"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toEndOf="@+id/row_list_item_amount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/row_list_item_lengthcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_1"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row_list_item_category" />

    <TextView
        android:id="@+id/row_list_item_lengthtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/none"
        app:layout_constraintStart_toEndOf="@+id/row_list_item_lengthcount"
        app:layout_constraintTop_toBottomOf="@+id/row_list_item_category" />

    <TextView
        android:id="@+id/row_list_item_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/n"
        app:layout_constraintEnd_toStartOf="@+id/row_list_item_perday"
        app:layout_constraintStart_toEndOf="@+id/row_list_item_lengthtype"
        app:layout_constraintTop_toBottomOf="@+id/row_list_item_category" />

    <Button
        android:id="@+id/row_list_item_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/list_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/row_list_item_perday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/list_0_day"
        app:layout_constraintEnd_toStartOf="@+id/row_list_item_edit"
        app:layout_constraintStart_toEndOf="@+id/row_list_item_repeat"
        app:layout_constraintTop_toBottomOf="@+id/row_list_item_category" />

</android.support.constraint.ConstraintLayout>